cmake_minimum_required(VERSION 3.23)
project(Part_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Part_1 main.cpp "Chapter 1/ch1.cpp" "Chapter 1/ch1.h" "Chapter 2/ch2.cpp" "Chapter 2/ch2.h" "Chapter 3/ch3.cpp" "Chapter 3/ch3.h" "Chapter 3/BufferOverflow.cpp" "Chapter 3/BufferOverflow.h" "Chapter 3/LinkedList.cpp" "Chapter 3/LinkedList.h" "Chapter 3/Auto.cpp" "Chapter 3/Auto.h")
